# green-economy-skills

./: .gitignore  composition.ipynb  exploration.ipynb  green_jobs.xlsx  greentimesharesoc.xlsx  load_data.py  pyproject.toml  readme.md  skill_annotation.py  skill_category_plots.py  skill_maps.py  subcategory_green_percentage_script.py  util.py
_data/: 4digitoccupationbyvariousfactorsjd19.xlsx  Occupations with the expected highest (percentage) decline, 2021-2035, Change.csv  Occupations with the expected highest (percentage) decline, 2021-2035, Share.csv  Occupations with the expected highest (percentage) decline, 2021-2035.csv  Occupations with the expected highest (percentage) growth, 2021-2035, Change.csv  Occupations with the expected highest (percentage) growth, 2021-2035, Shares.csv  Occupations with the expected highest (percentage) growth, 2021-2035.csv  ProjectedTotalEmploymentByIndustry2035CSV.csv  SOC2010toSOC2020ConversionTable.csv  Top 20 4-digit occupations 2021-2035, largest declines, 000s.csv  Top 20 4-digit occupations based on employment growth, 2021-2035, 000s.csv  Top 20 4-digit occupations by growth, 2021-2035 (per cent change).csv  Top 20 4-digit occupations by size of Replacement Demand, 2021-2035 (000s).csv  Top 20 4-digit occupations in terms of Employment levels in 2035.csv  Top 20 4-digit occupations, 2021-2035 (largest per cent declines).csv  annotated_skills.csv  skills_by_cat_green_frac.csv  skills_key.csv  soc_structure.csv  subcategories_by_green_percentage.csv
