[tool.poetry]
name = "social-datathon-2023"
version = "0.1.0"
description = ""
authors = ["KarimAED <karim.alaael-din@gmx.de>"]
readme = "README.md"
packages = [{include = "social_datathon_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
xarray = "^2023.2.0"
scikit-learn = "^1.2.1"
openpyxl = "^3.1.1"
jupyter = "^1.0.0"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
